Create tests and modify services

--- a/force-app/main/default/classes/AlertTriggerHandler.cls
+++ b/force-app/main/default/classes/AlertTriggerHandler.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-public class AlertTriggerHandler {
+public without sharing class AlertTriggerHandler {
     
     // Handlers: -------------------------------------------------------------------------------------------------------
     
