--- a/force-app/main/default/classes/TranslationTriggerHandler.cls
+++ b/force-app/main/default/classes/TranslationTriggerHandler.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-public class TranslationTriggerHandler {
+public without sharing class TranslationTriggerHandler {
     
     // Handlers: -------------------------------------------------------------------------------------------------------
     
