--- a/force-app/main/default/classes/UserTriggerHandler.cls
+++ b/force-app/main/default/classes/UserTriggerHandler.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-public class UserTriggerHandler {
+public without sharing class UserTriggerHandler {
     
     // Handlers: -------------------------------------------------------------------------------------------------------
     
