--- a/force-app/main/default/classes/StudySiteTriggerHandler.cls
+++ b/force-app/main/default/classes/StudySiteTriggerHandler.cls
@@ -17,30 +17,20 @@ public without sharing class StudySiteTriggerHandler {
     public class CreatePIOrSendNotificationHandler extends TriggerHandler{
         
         public override void afterInsert(List<SObject> newList) {
-            sendNotification(newList);
+            createPIUserOrSendNotification(newList, null);
         }
         
         public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            sendNotificationOnUpdate(newList, (Map<Id, Study_Site__c>)oldMap);
+            createPIUserOrSendNotification(newList, (Map<Id, Study_Site__c>)oldMap);
         }
     }
     
-    public class PrepopulateUserModeHandler extends TriggerHandler{
+    public class SwitchContactUserModeHandler extends TriggerHandler{
         
         public override void afterInsert(List<SObject> newList) {
-            prepopulateUserMode(newList);
+            switchContactUserMode(newList);
         }
         
-        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            prepopulateUserModeOnUpdate(newList, (Map<Id, Study_Site__c>)oldMap);
-        }
-    }
-    
-    public class SwitchUserModeHandler extends TriggerHandler{
-        
-        public override void afterInsert(List<SObject> newList) {
-            switchUserMode(newList);
-        }
     }
     
     public class CreateStatusHistoryHandler extends TriggerHandler{
@@ -53,96 +43,43 @@ public without sharing class StudySiteTriggerHandler {
     // Logic: ----------------------------------------------------------------------------------------------------------
     
     @TestVisible
-    private static void sendNotification(List<Study_Site__c> studySites) {
-        Set<Id> contactIds = new Set<Id>();
-        List<Study_Site__c> processedStudySites = new List<Study_Site__c>();
-        for (Study_Site__c studySite : studySites) {
-            if (studySite.Principal_Investigator__c != null && studySite.Override_PI_Referral_Status__c == StudySiteService.PI_S_INVITATION_SENT) {
-                contactIds.add(studySite.Principal_Investigator__c);
-                processedStudySites.add(studySite);
-            }
-        }
-        if (contactIds.isEmpty()) return;
-        
-        Map<Id, User> communityUsers = new Map<Id, User>();
-        for (User usr : CommunityService.getCommunityUsersByContactIds(contactIds)) communityUsers.put(usr.ContactId, usr);
-        
-        Set<Id> toCreateUser = new Set<Id>();
-        Map<Id, String> toSendNotificationMap = new Map<Id, String>();
-        
-        for (Study_Site__c ss : processedStudySites) {
-            if (communityUsers.containsKey(ss.Principal_Investigator__c)) {
-                toSendNotificationMap.put(ss.Id, ss.Principal_Investigator__c);
-            } else {
-                toCreateUser.add(ss.Principal_Investigator__c);
-            }
-        }
-        
-        if (!toCreateUser.isEmpty()) CommunityService.createPortalUsers(toCreateUser);
-        if (!toSendNotificationMap.isEmpty()) SendEmailTemplate.sendEmailNotification(CommunityService.COMMUNITY_ET_PI, toSendNotificationMap);
-    }
-    
-    @TestVisible
-    private static void sendNotificationOnUpdate(List<Study_Site__c> newStudySites, Map<Id, Study_Site__c> oldMap) {
-        List<Study_Site__c> studySitesToSendNotification = new List<Study_Site__c>();
-        for (Study_Site__c ss : newStudySites) {
-            if ((oldMap.get(ss.Id).Principal_Investigator__c != ss.Principal_Investigator__c)
-                    || (oldMap.get(ss.Id).Override_PI_Referral_Status__c != ss.Override_PI_Referral_Status__c)) {
-                studySitesToSendNotification.add(ss);
-            }
-        }
-        sendNotification(studySitesToSendNotification);
-    }
-    
-    @TestVisible
-    private static void prepopulateUserModeOnUpdate(List<Study_Site__c> newList, Map<Id, Study_Site__c> oldMap) {
-        List<Study_Site__c> studySitesToPopulate = new List<Study_Site__c>();
-        for (Study_Site__c studySite : newList) {
-            if (oldMap.get(studySite.Id).Principal_Investigator__c != studySite.Principal_Investigator__c) {
-                studySitesToPopulate.add(studySite);
-            }
-        }
-        prepopulateUserMode(studySitesToPopulate);
-    }
-    
-    @TestVisible
-    private static void prepopulateUserMode(List<Study_Site__c> studySites) {
-        Set<Id> studySiteContactIds = new Set<Id>();
-        for (Study_Site__c studySite : studySites) {
-            if (studySite.Principal_Investigator__c != null) {
-                studySiteContactIds.add(studySite.Principal_Investigator__c);
-            }
-        }
-        if (studySiteContactIds.isEmpty()) return;
-        Map<Id, Contact> contactsToUpdate = new Map<Id, Contact>();
-        for (Contact studySiteContact : CommunityService.getContactsByUserContactIds(studySiteContactIds)) {
-            String userType = studySiteContact.userCommunytyType__c;
-            String userMode = studySiteContact.userCommunityMode__c;
-            if (userMode == null || userType == null || !userType.contains(CommunityService.USER_MODE_PI)) {
-                if (userMode == null) studySiteContact.userCommunityMode__c = CommunityService.USER_MODE_PI;
-                if (userType == null || !userType.contains(CommunityService.USER_MODE_PI)) {
-                    if (userType == null) {
-                        studySiteContact.userCommunytyType__c = CommunityService.USER_MODE_PI;
-                    } else {
-                        studySiteContact.userCommunytyType__c = userType + ';' + CommunityService.USER_MODE_PI;
-                    }
+    private static void createPIUserOrSendNotification(List<Study_Site__c> newList, Map<Id, Study_Site__c> oldMap) {
+        Set<Id> piContactIds = new Set<Id>();
+        for (Study_Site__c ss : newList) if(ss.Principal_Investigator__c != null) piContactIds.add(ss.Principal_Investigator__c);
+        Set<Id> contactIdsWithCreatedUser = new Set<Id>();
+        for (User user : CommunityService.getCommunityUsersByContactIds(piContactIds)) contactIdsWithCreatedUser.add(user.ContactId);
+        Set<Id> contactIdsForCreateUsers = new Set<Id>();
+        Map<Id, String> contactsForSendNotificationMap = new Map<Id, String>();
+        for(Study_Site__c ss : newList){
+            if(ss.Override_PI_Referral_Status__c == StudySiteService.PI_S_INVITATION_SENT && ss.Principal_Investigator__c != null &&
+                    (oldMap == null || (oldMap != null && ss.Override_PI_Referral_Status__c != oldMap.get(ss.Id).Override_PI_Referral_Status__c))){
+                if(contactIdsWithCreatedUser.contains(ss.Principal_Investigator__c)){
+                    contactsForSendNotificationMap.put(ss.Id, ss.Principal_Investigator__c);
+                }else{
+                    contactIdsForCreateUsers.add(ss.Principal_Investigator__c);
                 }
-                if (!contactsToUpdate.containsKey(studySiteContact.Id)) contactsToUpdate.put(studySiteContact.Id, studySiteContact);
             }
         }
-        update contactsToUpdate.values();
+        if(contactIdsForCreateUsers.size() > 0) CommunityService.createPortalUsers(contactIdsForCreateUsers);
+        if(contactsForSendNotificationMap.size() > 0) SendEmailTemplate.sendEmailNotification(CommunityService.COMMUNITY_ET_PI, contactsForSendNotificationMap);
     }
     
     @TestVisible
-    private static void switchUserMode(List<Study_Site__c> newList) {
-        List<Contact> contacts = new List<Contact>();
-        for(Study_Site__c ss : [SELECT Id, Principal_Investigator__c FROM Study_Site__c WHERE Id IN: newList]){
-            contacts.add(new Contact(
-                    Id = ss.Principal_Investigator__c,
-                    userCommunityMode__c = CommunityService.USER_MODE_PI
-            ));
+    private static void switchContactUserMode(List<Study_Site__c> studySites) {
+        Set<Id> piContactIds = new Set<Id>();
+        for (Study_Site__c ss : studySites) if (ss.Principal_Investigator__c != null) piContactIds.add(ss.Principal_Investigator__c);
+        if (piContactIds.isEmpty()) return;
+        List<Contact> contactsForUpdate = new List<Contact>();
+        for (Contact piContact : CommunityService.getContactsByUserContactIds(piContactIds)) {
+            piContact.userCommunityMode__c = CommunityService.USER_MODE_PI;
+            if (piContact.userCommunytyType__c == null) {
+                piContact.userCommunytyType__c = CommunityService.USER_MODE_PI;
+            } else if(!piContact.userCommunytyType__c.contains(CommunityService.USER_MODE_PI)){
+                piContact.userCommunytyType__c += ';' + CommunityService.USER_MODE_PI;
+            }
+            contactsForUpdate.add(piContact);
         }
-        update contacts;
+        update contactsForUpdate;
     }
     
     @TestVisible
