--- a/force-app/main/default/classes/ParticipantVisitsRemote.cls
+++ b/force-app/main/default/classes/ParticipantVisitsRemote.cls
@@ -1,8 +1,14 @@
 /**
- * Created by user on 11.04.2019.
+ * Created by Igor Malyuta on 11.04.2019.
  */
 
 public with sharing class ParticipantVisitsRemote {
+
+    public static final Map<String, String> LABELS_MAP = new Map<String, String> {
+            'Questions about your health and medications' => Label.StudyVisit_Legend_Questions,
+            'Brief physical examination' => Label.StudyVisit_Legend_Brief_Physical_Examination,
+            'Receive study medication' => Label.StudyVisit_Legend_Receive_Medication
+    };
 
     @AuraEnabled
     public static String getVisitsPreview() {
@@ -16,9 +22,49 @@ public with sharing class ParticipantVisitsRemote {
     @AuraEnabled
     public static String getParticipantVisits() {
         try{
-            return JSON.serialize(VisitService.getInstance().getAllVisits());
+            List<Visit__c> visits = VisitService.getInstance().getAllVisits();
+
+            PaginationData paginationData = new PaginationData();
+            paginationData.pageRecordsCount = 4;
+            paginationData.setRecordsCount(visits.size());
+
+            InitData initData = new InitData();
+            initData.visits = visits;
+            initData.paginationData = paginationData;
+
+            return JSON.serialize(initData);
         }catch (Exception e) {
             return (String) AuraHelper.throwException(e);
         }
+    }
+
+    @AuraEnabled
+    public static String getVisitsLegend() {
+        try{
+            List<PicklistEntry> picklistEntries = Visit__c.Icons__c.getDescribe().picklistValues;
+            List<Legend> legends = new List<ParticipantVisitsRemote.Legend>();
+            for(PicklistEntry entry : picklistEntries) {
+                Legend leg = new Legend();
+                leg.iconId = entry.value;
+                leg.iconLabel = entry.label;
+                leg.iconLegend = LABELS_MAP.get(entry.label);
+                legends.add(leg);
+            }
+
+            return JSON.serialize(legends);
+        }catch (Exception e) {
+            return (String) AuraHelper.throwException(e);
+        }
+    }
+
+    class InitData {
+        public List<Visit__c> visits;
+        public PaginationData paginationData;
+    }
+
+    class Legend {
+        public String iconId;
+        public String iconLabel;
+        public String iconLegend;
     }
 }
